--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 @layer base {
   body {
-    @apply font-[Raleway];
+   font-family:'Cinzel';
   }
   li {
     @apply px-4;
